[metadata]
name = fdm
version = 0.4.1
author = Wessel Bruinsma
author_email = wessel.p.bruinsma@gmail.com
description = Compute derivatives with finite-difference methods
url = https://github.com/wesselb/fdm
license = MIT
license_file = LICENCE.txt
long_description = file: README.md
long_description_content_type = text/markdown
